Fix: JSON URLs for checklists need to stay restful, so I moved the HTML request to checklists#home from checklists#index Fix: error display when creating/editing checklists Fix: use explicit assignment to hash in EditChecklistView.on_save as I can't set hash to a href attribute in IE7 because it's returned as a full URL Fix: include json2.js as it seems IE7 doesn't have a JSON object Fix: extra padding for checklist items on the entry page as IE7 doesn't have any padding by default

--- a/public/stylesheets/sass/checklists.sass
+++ b/public/stylesheets/sass/checklists.sass
@@ -180,6 +180,7 @@ select
     margin-bottom: 10px
     width: 50%
     list-style-image: url('/images/unchecked.png')
+    padding-left: 5px
     .instructions
       float: right
       color: #c0c0c0
